@@ -1,5 +1,7 @@
 plugins {
-    id("org.jetbrains.kotlin.jvm")
+    kotlin("jvm")
+    id("org.jetbrains.kotlin.plugin.serialization") version "1.9.21"
+    id("io.kotest") version "0.4.10"
 
 }
 
@@ -7,36 +9,31 @@ val kotlinVersion: String by rootProject.extra
 val kotlinCoroutinesVersion: String by rootProject.extra
 val appVersion: String by rootProject.extra
 
-group = "dev.rubentxu.pipeline.backend"
+group = "dev.rubentxu.pipeline.dsl"
 version = appVersion
 
-
 dependencies {
-    implementation(project(":pipeline-dsl"))
-    implementation(project(":pipeline-model"))
+    implementation("org.yaml:snakeyaml:2.2")
 
+    implementation("org.jetbrains.kotlin:kotlin-serialization:$kotlinVersion")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.1")
+
+
+    implementation("org.gradle:gradle-tooling-api:8.4")
+    implementation("org.eclipse.jgit:org.eclipse.jgit:6.7.0.202309050840-r")
     implementation("ch.qos.logback:logback-classic:1.4.11")
 
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion")
-    implementation("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion")
-
-    implementation("org.freemarker:freemarker:2.3.32")
-
-    implementation("org.jetbrains.kotlin:kotlin-scripting-jsr223:$kotlinVersion")
-    implementation("org.jetbrains.kotlin:kotlin-scripting-jvm:$kotlinVersion")
-
-    implementation("com.github.docker-java:docker-java-core:3.3.4")
-    implementation("com.github.docker-java:docker-java-transport-zerodep:3.3.4")
-
-
     testImplementation(kotlin("test"))
+
     testImplementation("io.kotest:kotest-runner-junit5-jvm:5.7.2")
     testImplementation("io.kotest:kotest-assertions-core-jvm:5.7.2")
     testImplementation("org.mockito.kotlin:mockito-kotlin:5.1.0")
     testImplementation("io.kotest:kotest-property-jvm:5.7.2")
 
+
 }
+
 
 
 java {
@@ -57,12 +54,20 @@ tasks {
 
     test {
         useJUnitPlatform()
+//        jvmArgs()
     }
 }
 
-
-tasks.register("printClasspath") {
-    doLast {
-        configurations["runtimeClasspath"].forEach { println(it) }
-    }
+tasks.withType<Test> {
+    jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
 }
+
+tasks
+    .withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompilationTask<*>>()
+    .configureEach {
+        compilerOptions
+            .languageVersion
+            .set(
+                org.jetbrains.kotlin.gradle.dsl.KotlinVersion.KOTLIN_1_9
+            )
+    }
